# snitch

hw/ip/snitch/src/: snitch_pkg.sv
hw/ip/snitch_cluster/: Bender.yml
hw/ip/snitch_cluster/src/: snitch_cluster.sv  snitch_hwpe_subsystem.sv
hw/ip/snitch_icache/src/: snitch_icache_lookup.sv
hw/system/snitch_cluster/: Bender.yml  Makefile  readme_tech.txt
hw/system/snitch_cluster/debug/: cache_debug.do  cache_debug_tech.do  hwpe_ctrl.do  hwpe_plus_snitch[0].do  hwpe_plus_snitch[0]_debug_status_read.do  init_latches.py  init_latches.tcl  tcdm_tech_debug.do
hw/system/snitch_cluster/sw/: CMakeLists.txt
sw/HWPE/: CMakeLists.txt
sw/HWPE/include/: hwpe_snitch_redmule_archi.h  hwpe_snitch_redmule_hal.h  tensor_dim.h  utils.h
sw/HWPE/src/: hwpe_snitch_redmule_hal.c  utils.c
sw/HWPE/tests/: redmule_config.c  redmule_test.c
